[project]
name = "neuro-symbolic-rag"
version = "0.1.0"
description = "A local agentic RAG system with graph augmentation."
readme = "README.md"
requires-python = ">=3.11,<3.12"

# 只保留直接使用的顶级包
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.1.0",
    "langchain-chroma>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "streamlit>=1.38.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "pymupdf>=1.24.0",     # 对应 import fitz
    "python-docx>=1.1.0",
    "networkx>=3.0",
    "pydantic>=2.0.0",
    "numpy<2.0.0",         # 强制限制 numpy 版本以兼容某些模型库
    "torch",               # 深度学习基础
    "python-dotenv",       # 环境变量管理
]

[tool.uv]
managed = true
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"